--- a/ep12.md
+++ b/ep12.md
@@ -256,6 +256,9 @@ nc::prints();
 
 不管是哪种方法，在被拓展的作用域内出现的实体都可以直接访问这些被拓展的命名空间成员而不需要用到作用域运算符(当然也可以用)。
 
+> 拓展成员的作用域后，我们还是可以用作用域运算符来访问这些成员，不过要注意：
+> 如果在使用using指示后还是用作用域运算符来访问这些成员，则该命名空间中不能有与其同名的内嵌命名空间，否则使用作用域运算符访问的就是内嵌命名空间的成员了。
+
 > 这两种方法和类型别名一样，可以存在于全局作用域，命名空间、函数内或者是类内。
 
 #### 12.321 using声明
