--- a/原始文件/ep2_2-4.md
+++ b/原始文件/ep2_2-4.md
@@ -660,13 +660,16 @@ cout << "The value of ival\n" << "direct value: " << ival << "\n"
 
 ```c++
 string nums [] = {"one", "two", "three" }; // 数组的元素是 string 对象 
-string *p = &nums [0] ; // p 指向 nums 的第一个
+string *p = &nums[0] ; // p 指向 nums 的第一个
 ```
 
-然而，数组还有一个特性：在很多用到数组名字的地方，编译器都会自动地将其替换为一个指向数组首元素的指针
+然而，数组还有一个特性：在很多用到数组名字的地方，编译器都会自动地将其替换为一个指向数组首元素的指针。
+因为这个特性，对于编译器来说，对**数组(包括多维数组)使用取地址符的效果和直接使用数组名字是一样的**，对数组(包括多维数组)使用取地址符也是得到指向数组首元素的指针。
 
 ```c++
-string *p2 = nums; // 等价于 p2 = &nums[0]
+string nums[] = {"one", "two", "three"};
+string *p2 = nums; // 等价于 p2 = &nums[0];
+string *p3 = &nums; // 等价于 p3 = nums;
 ```
 
 > 不能用临时数组的地址来初始化或赋值指向数组元素的指针
