--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -1,3 +1,4 @@
+[TOC]
 # 第十章 模板
 
 ## 10.1 模板概念
@@ -13,7 +14,7 @@
 * 函数模板
 * 类模板
 
-模板的声明和定义和普通的函数和类的声明和定义类似，要在其声明或定义之前加上关键字template和模板参数列表。
+模板的声明和定义和普通的函数和类的声明和定义类似，要在其声明或定义之前加上关键字`template`和模板参数列表。
 
 模板的声明和定义都不能在函数或函数模板内，但可以在类或类模板内。
 
@@ -35,10 +36,11 @@ struct Cls { ty data_mem; void prints() { cout << data_mem << " " << int_par << 
 ## 10.3 模板的声明与定义
 
 模板也有声明和定义两种形式，形式为：
-> 模板的声明:
+
+模板的声明:
 > template 模板参数列表 函数或类的声明语句
-> 
-> 模板的定义:
+
+模板的定义:
 > template 模板参数列表 函数或类的定义语句
 
 模板参数列表(template parameter list)类似于函数形参表，是一个由逗号`,`分隔的一个或多个模板形参(template parameter)的列表，该列表用`<>`包围起来，且该形参表不能为空，必须至少有一个形参。
@@ -100,7 +102,7 @@ prints();
 类型形参在模板形参的声明形式为：
 > typename/class 类型形参名
 
-关键字typename和class的含义相同，可以互换使用。
+关键字`typename`和`class`的含义相同，可以互换使用。
 
 类型形参也就是表示类型的形参，我们可以将类型参数看作类型说明符，就像内置类型或类类型说明符一样使用。
 所以类型参数可以用来指定返回类型或函数的参数类型，以及在函数体内用于变量声明或类型转换。
@@ -123,7 +125,7 @@ void prints(ty val, ty2 val2) { }
 * 整数类型
 * 指针或左值引用类型
 
-对于非类型形参的实参来说，该实参必须是常量表达式，必须要在编译时就能获得。
+对于非类型形参的实参来说，**该实参必须是常量表达式**，必须要在编译时就能获得。
 
 根据形参的类型，非类型形参的实参还有以下的限制条件：
 * 对于整数类型的非类型形参的实参来说：
@@ -145,12 +147,12 @@ void prints(ty val, int val2 = tval) { }
 ### 10.43 模板类形参
 
 对于模板形参来说，还有一种特殊的形参，也就叫做模板类形参。
-我们可以将一个类模板当做某个模板形参来使用，此时我们只需要在模板形参表写上关键字template、对应类模板的模板形参表和关键字typename或class就行。
+我们可以将一个类模板当做某个模板形参来使用，此时我们只需要在模板形参表写上关键字`template`、对应类模板的模板形参表和关键字`typename`或`class`就行。
 
 模板类形参在模板形参的声明形式为：
 > template 类模板的模板形参表 typename/class 模板类形参名
 
-关键字typename和class的含义相同，可以互换使用。
+关键字`typename`和`class`的含义相同，可以互换使用。
 
 类模板的模板形参表中的模板形参可以有形参名和默认实参，如果填入了默认实参，则使用该模板类形参时会以此时的默认实参为主。
 
@@ -200,13 +202,14 @@ C++中存在两种参数包：
 模板参数包的声明形式与普通模板形参类似，任何普通模板形参声明表达式的关键字或者说明符(或修饰符)后，形参名前加上省略符`...`，就成了一个模板参数包的声明。
 
 模板参数包的声明形式为：
-> 类型参数包的声明：
+
+类型参数包的声明：
 > typename/class ... 参数包名
 
-> 非类型参数包的声明：
+非类型参数包的声明：
 > 类型说明符(可含类型修饰符) ... 参数包名
 
-> 模板类参数包的声明：
+模板类参数包的声明：
 > template 类模板的模板形参表 typename/class ... 参数包名
 
 ```c++
@@ -243,10 +246,10 @@ Cls<15,8,123,25,8> obj;
 之前我们介绍过我们可以用作用域运算符`::`来访问一个类类型的静态成员或者类类型成员。
 因为编译器不会在模板定义时去确认成员，所以默认情况下，编译器会认为通过作用域运算符访问的成员为静态成员，所以为了能够访问类类型成员，我们就要显式指定访问的是类类型成员。
 
-我们通过使用关键字typename来实现显式访问类类型成员，使用形式为：
+我们通过使用关键字`typename`来实现显式访问类类型成员，使用形式为：
 > typename 模板类型形参名(或模板类形参实例)::类类型成员名
 
-typename要紧跟在该模板类型形参名或模板类形参实例后面，所以static等修饰限定符要放在typename之前。
+`typename`要紧跟在该模板类型形参名或模板类形参实例后面，所以static等修饰限定符要放在`typename`之前。
 
 ```c++
 #include <vector>
@@ -442,11 +445,11 @@ void prints(string str, tys... obj)
     cout << str << " ";
     // 没有用，因为以下是编译阶段进行的检查。
     if (sizeof...(obj) > 0)
-    // 该语句是该模板进行递归调用
-    // 如果该模板要实例化，则在实例化阶段，\
-    编译器会沿着调用链检查所有的调用是否匹配，\
-    其中当obj中的参数数量为0时，无法匹配到该函数模板，所以实例化会出错。
-    prints(obj...);
+       // 该语句是该模板进行递归调用
+       // 如果该模板要实例化，则在实例化阶段，\
+       编译器会沿着调用链检查所有的调用是否匹配，\
+       其中当obj中的参数数量为0时，无法匹配到该函数模板，所以实例化会出错。
+       prints(obj...);
 }
 int main()
 {
@@ -539,7 +542,7 @@ cout << ob.ins << " " << ob.str;
 ```
 
 对于==类模板的隐式实例化==来说，其成员并不是在生成实例后就全部实例化了。
-默认情况下，==类模板的成员只有在其使用时才被实例化==。
+默认情况下，==类模板的成员只有在其被使用时才被实例化==。
 这一特性使得即使某种类型不能符合模板操作的要求，我们仍然能用该类型来实例化类模板。
 
 ```c++
@@ -570,7 +573,7 @@ cout << obj.ob;
 
 当我们用函数模板来初始化或赋值函数指针时，编译器自动使用指针的各个对应类型来推断模板的实参，此时也必须遵循函数指针的初始化或赋值规则(比如形参数量类型等都要一致)。
 
-当我们使用了没有默认实参的模板类型形参或模板类形参作为函数形参的类型时，编译器推断的类型与使用auto说明符的推断类型一样(也支持引用折叠等操作)：
+当我们使用了没有默认实参的模板类型形参或模板类形参作为函数形参的类型时，编译器推断的类型与使用`auto`说明符的推断类型一样(也支持引用折叠等操作)：
 
 * 当函数实参的类型为以下这些时，编译器会自动对其进行类型转换(对于其他类型则不会进行类型转换)：
   * 编译器会忽略顶层const。
@@ -604,7 +607,7 @@ void (*ptr3) (int, double) = prints2;
 > * 其类型不含有模板类型形参以及模板类形参。
 > * 其类型含有有默认实参的模板形参。
 
-对于函数指针的初始化或赋值来说，如果两边都需要使用类型自动推断的操作时(也就是函数指针的类型为auto或decltype，且函数模板的某函数形参的类型使用了没有默认实参的模板类型形参或模板类形参时)则不能使用模板实参推断，只能使用模板实参表来隐式实例化。
+对于函数指针的初始化或赋值来说，如果两边都需要使用类型自动推断的操作时(也就是函数指针的类型为`auto`或`decltype`，且函数模板的某函数形参的类型使用了没有默认实参的模板类型形参或模板类形参时)则不能使用模板实参推断，只能使用模板实参表来隐式实例化。
 
 ```c++
 template <typename ty>
@@ -626,8 +629,10 @@ decltype(prints<int>) *ptr4 = prints;
    * 该函数形参类型不含有模板形参。
    * 该函数形参类型含有有默认实参的模板形参。
 2. 模板实参推断只能用于满足以下这个条件的函数模板，不满足的函数模板不能使用模板实参推断：
-   * 对于函数调用形式的模板实参推断，函数模板中所有没有默认实参的模板形参都应该出现在==函数形参表的形参类型==中。
-   * 对于函数指针初始化或赋值的模板实参推断，函数模板中所有没有默认实参的模板形参都应该出现在函数形参表的==形参类型或者返回类型==中。
+   * 对于函数调用形式的模板实参推断：
+    函数模板中所有没有默认实参的模板形参都应该出现在==函数形参表的形参类型==中。
+   * 对于函数指针初始化或赋值的模板实参推断：
+    函数模板中所有没有默认实参的模板形参都应该出现在函数形参表的==形参类型或者返回类型==中。
 
 ```c++
 int ar[8] = {3,8,6,3};
@@ -713,7 +718,7 @@ extern template struct Cls<string, int, 48>;
 
 > 对于一个给定的实例化版本，同作用域中可能有多个显式实例化声明，但有且只有一个对应的显式实例化定义。
 
-> 对于显式实例化定义来说，同作用域中如果在显式实例化定义语句之前已经存在对应声明的全部特例化时，则其所有相同声明的显式实例化定义就不会生效，所以此时可以有多个同声明的显式实例化定义。
+> 对于显式实例化定义来说，同作用域中如果在显式实例化定义语句之前已经存在对应声明的全部特例化时，则其所有相同声明的显式实例化定义就不会生效，所以此时可以有多个同声明部分的显式实例化定义。
 
 当我们==使用模板(隐式实例化)时，编译器会检查同作用域中是否有相同模板实参的显式实例化，如果有，则按照该显式实例化的实例来进行操作，而不是再创建一个新的实例==。
 
@@ -1043,7 +1048,7 @@ struct Cls
 类成员的类外定义的形式为：
 > template 模板形参表 成员的定义语句(其中包含模板类型)
 
-定义在类模板之外的成员必须以关键字template开始，后接类模板形参表，该形参表中的形参名可以与其模板的形参名不一样。
+定义在类模板之外的成员必须以关键字`template`开始，后接类模板形参表，该形参表中的形参名可以与其模板的形参名不一样。
 但是该形参表必须要与类模板的形参表的数量，类型和顺序一致(可以忽略顶层const)，而且该形参表中每个形参都必须要有形参名，且都不能有默认实参。
 
 与往常一样，当我们在类模板外定义一个成员时，也必须说明该成员属于哪个模板类型。因此需要在类外定义语句的成员名之前加上模板类型和作用域运算符`::`。
@@ -1657,4 +1662,3 @@ int main()
     return 0;
 }
 ```
-
