--- a/files/第12章_命名空间.md
+++ b/files/第12章_命名空间.md
@@ -1,3 +1,4 @@
+[TOC]
 # 第十二章 命名空间
 
 大型程序往往会使用多个独立开发的库，这些库又会定义大量的全局名字，如类、函数和模板等。
@@ -8,9 +9,9 @@
 
 ## 12.1 命名空间的定义
 
-一个命名空间的定义包含三部分：首先是关键字namespace，随后是命名空间的名字；最后在命名空间名字后面是一个复合语句，复合语句中包含一系列的声明和定义。
+一个命名空间的定义包含三部分：首先是关键字`namespace`，随后是命名空间的名字；最后在命名空间名字后面是一个复合语句，复合语句中包含一系列的声明和定义。
 
-命名空间既可以定义在全局作用域内，也可以定义在其他命名空间中，但是不能定义在函数或类的内部。
+命名空间既可以定义在全局作用域内，也可以定义在其他命名空间中，但是**不能定义在函数或类的内部**。
 
 ### 12.11 命名空间的定义形式
 
@@ -126,7 +127,7 @@ ns::prints();
 ns::ns2::prints2();
 ```
 
-模板特例化必须要在原始模板所属的命名空间中声明，不能在该命名空间之外声明。
+**模板特例化必须要在原始模板所属的命名空间中声明，不能在该命名空间之外声明**。
 和其他命名空间名字类似，只要我们在命名空间中声明了特例化，就能在该命名空间外部定义它了。
 
 ## 12.2 命名空间的分类
@@ -152,17 +153,17 @@ ns::ns2::prints2();
 
 未命名的命名空间(unnamed namespace)是指定义时没有名字的命名空间。
 
-未命名的命名空间和普通命名空间一样，可以内不连续，但是对于定义在全局作用域中的未命名的命名空间，它的不连续性只能在某个给定的文件内，不能跨越多个文件。
+未命名的命名空间和普通命名空间一样，可以不连续，但是对于定义在全局作用域中的未命名的命名空间，它的不连续性只能在某个给定的文件内，不能跨越多个文件。
 
 所以每个文件定义自己的全局作用域中的未命名的命名空间，如果两个文件都含有全局作用域的未命名的命名空间，则这两个空间互相无关。
-这两个未命名的命名空间中可以定义相同的名字，并且这些定义表示的是不同实体。
-因此如果一个头文件定义了全局作用域中的未命名的命名空间，则该命名空间中定义的名字将在每个包含了该头文件的文件中对应不同实体。
+这两个未命名的命名空间中可以定义相同名字的实体，并且这些定义表示的是不同实体。
+因此**如果一个头文件定义了全局作用域中的未命名的命名空间，则该命名空间中定义的名字将在每个包含了该头文件的文件中对应不同实体**。
 
 > 所以和其他命名空间不同，全局作用域中的未命名的命名空间仅在特定的文件内部有效，其作用范围不会橫跨多个不同的文件，所以可以用全局作用域中的未命名的命名空间来代替每个文件中的静态声明。
 
 定义在未命名的命名空间中的名字可以在该命名空间所在的作用域中直接使用，毕竟我们找不到什么命名空间的名字来限定它们；同样的，我们也不能在该命名空间所在的作用域中对其成员使用作用域运算符。
 
-未命名的命名空间中的名字可以与该命名空间所在的作用域的实体名字相同，不会出现重复定义，但是会出现二义性问题，此时可以用作用域运算符来消除二义性(但因为未命名的命名空间不能用作用域运算符，所以也就用不了其同名成员了)。
+未命名的命名空间中的实体名字可以与该命名空间所在的作用域的其他实体名字相同，不会出现重复定义，但是会出现二义性问题，此时可以用作用域运算符来消除二义性(但因为未命名的命名空间不能用作用域运算符，所以也就用不了其同名成员了)。
 
 ```c++
 namespace ns 
@@ -209,19 +210,20 @@ namespace ns
 我们之前介绍过访问命名空间成员的方法是用作用域运算符的方式，但是当命名空间太长时，访问成员就会异常的麻烦，所以为了解决这个问题，我们有两种方法：
 * 定义命名空间的别名
 * 拓展成员的作用域
-  * using声明
-  * using指示
+  * `using`声明
+  * `using`指示
 
 ### 12.31 命名空间的别名
 
 命名空间的别名(namespace alias)使得我们可以为命名空间的名字设定一个短得多的同义词，我们可以像对原命名空间一样对该别名作出任何可以的操作。
-命名空间的别名只在该别名声明语句所在的作用域中生效。
+
+> 命名空间的别名只在该别名声明语句所在的作用域中生效。
 
 > 一个命名空间可以有好几个同义词或别名，所有别名都与命名空间原来的名字等价。
 
 > 命名空间的别名和类型别名一样，可以存在于全局作用域，命名空间、函数内或者是类内。
 
-命名空间的别名声明语句是以关键字namespace开始，后面是别名所用的名字、=符号、命名空间原来的名字以及一个分号。
+命名空间的别名声明语句是以关键字`namespace`开始，后面是别名所用的名字、赋值号`=`、命名空间原来的名字以及一个分号`;`。
 
 别名声明语句的形式为：
 > namespace 别名 = 命名空间名;
@@ -249,34 +251,34 @@ nc::prints();
 我们也可以直接拓展某个命名空间的成员作用域来直接访问该空间的某些成员。
 
 拓展成员的作用域的方法有两种：
-* using声明
-* using指示
+* `using`声明
+* `using`指示
 
-这两种方法只在该方法语句所在的作用域中生效。
+> 这两种方法只在该方法语句所在的作用域中生效。
 
 不管是哪种方法，在被拓展的作用域内出现的实体都可以直接访问这些被拓展的命名空间成员而不需要用到作用域运算符(当然也可以用)。
 
 > 拓展成员的作用域后，我们还是可以用作用域运算符来访问这些成员，不过要注意：
-> 如果在使用using指示后还是用作用域运算符来访问这些成员，则该命名空间中不能有与其同名的内嵌命名空间，否则使用作用域运算符访问的就是内嵌命名空间的成员了。
+> 如果在使用`using`指示后还是用作用域运算符来访问这些成员，则该命名空间中不能有与其同名的内嵌命名空间，否则使用作用域运算符访问的就是内嵌命名空间的成员了。
 
 > 这两种方法和类型别名一样，可以存在于全局作用域，命名空间、函数内或者是类内。
 
 #### 12.321 using声明
 
-using声明(using declaration)语句一次只能拓展命名空间的一个非命名空间成员。
+`using`声明(using declaration)语句一次只能拓展命名空间的一个非命名空间成员。
 
-被拓展的成员的==作用域范围是从using声明语句的出现位置到该语句所在作用域的末尾==。
+被拓展的成员的==作用域范围是从`using`声明语句的出现位置到该语句所在作用域的末尾==。
 
-using声明语句为：
+`using`声明语句为：
 > using 命名空间名::成员名;
 
-using声明语句中的命名空间名可以是嵌套的命名空间，但不能是未命名或者未定义的命名空间。
+`using`声明语句中的命名空间名可以是嵌套的命名空间，但不能是未命名或者未定义的命名空间。
 
-using声明语句中的成员名不能为命名空间成员。
+`using`声明语句中的成员名不能为命名空间成员。
 而且对于非函数成员名来说，不能与该语句所在作用域中的其他实体同名；对于函数成员名来说，不能与该语句所在作用域中的其他函数定义语句中的函数首部有冲突。否则会有重复定义错误。
 但可以与所在作用域的外层作用域的实体同名，此时会在该语句所在作用域中隐藏掉外层的所有同名实体。
 
-> 当using声明语句中的成员名为重载函数名时，该函数在命名空间的所有版本都会被拓展。
+> 当`using`声明语句中的成员名为重载函数名时，该函数在命名空间的所有版本都会被拓展。
 
 ```c++
 namespace ns 
@@ -299,21 +301,21 @@ prints2();
 
 #### 12.322 using指示
 
-using指示(using directive)是另一种拓展成员作用域的方法。
-和using声明不一样的地方是，using指示会拓展给定命名空间的所有成员的作用域(包括在using指示语句之后添加进该空间的成员)。
+`using`指示(using directive)是另一种拓展成员作用域的方法。
+和`using`声明不一样的地方是，`using`指示会拓展给定命名空间的所有成员的作用域(包括在`using`指示语句之后添加进该空间的成员)。
 
 所有被拓展的成员的作用域范围==被提升到与包含该命名空间本身和该using指示语句的最近作用域范围一样的范围==。
 
-using指示语句的形式为：
+`using`指示语句的形式为：
 > using namespace 命名空间名;
 
-using指示语句中的命名空间名可以是嵌套的命名空间，但不能是未命名或者未定义的命名空间。
+`using`指示语句中的命名空间名可以是嵌套的命名空间，但不能是未命名或者未定义的命名空间。
 
-对于using指示语句中给定的命名空间中的成员来说：
+对于`using`指示语句中给定的命名空间中的成员来说：
 * 非函数成员名不能与该语句所在作用域中的其他实体同名，否则在使用该同名时会出现二义性错误。
 * 函数成员名不能与该语句所在作用域中的其他函数定义语句中的函数首部有冲突，否则在使用该同名时会出现二义性错误。
 
-但该using指示语句所提升的作用域中的内层作用域的实体可以与该命名空间的成员同名，此时会在内层作用域中隐藏掉该命名空间的所有同名成员。
+但该`using`指示语句所提升的作用域中的内层作用域的实体可以与该命名空间的成员同名，此时会在内层作用域中隐藏掉该命名空间的所有同名成员。
 
 ```c++
 namespace ns
@@ -360,7 +362,7 @@ int main()
 命名空间成员的函数匹配与普通的函数匹配的流程大部分一样，只不过有以下的这些区别：
 
 1. 函数匹配时的名字查找还会在实参类所属的命名空间中进行：
-  按照调用表达式的实参顺序，在每个实参类(以及实参类的基类)所属的命名空间中进行查找(只会在这个命名空间中查找，不会在该命名空间的外层作用域(包括外层空间)中进行查找)，并将查找到的所有同名函数加入到候选函数集中(即使该函数所属的命名空间在调用点不可见，也会将其加入)。
+  按照调用表达式的实参顺序，在每个实参类(以及实参类的基类)所属的命名空间中进行查找(只会在这个命名空间中查找，*不会在该命名空间的外层作用域(包括外层空间)中进行查找*)，并将查找到的所有同名函数加入到候选函数集中(即使该函数所属的命名空间在调用点不可见，也会将其加入)。
 
 ```c++
 namespace ns
@@ -403,11 +405,11 @@ namespace ns
         int ins = 15;
     };
 }
-// 错误：Cls的友元必须要为ns的成员，所以该函数不是友元\
+// 错误：Cls的友元必须要为ns的成员，该函数不是友元\
 所以该函数无法访问Cls的ins成员
 void prints(ns::Cls obj, int val) { cout << val << ' ' << obj.ins << " Cls\n"; }
 // 正确：为Cls的友元void prints(Cls obj, int val)的定义
-void ns::prints(Cls obj, int val) { cout << val << ' ' << obj.ins << " Cls\n"; }
+void ns::prints(Cls obj, int val) { cout << val << ' ' << obj.ins << " Cls2\n"; }
 
 int main()
 {
@@ -415,7 +417,7 @@ int main()
     // 错误：有多个函数匹配
     prints(ob, 3);
     // 正确：调用Cls类的友元\
-    输出3 15 Cls
+    输出3 15 Cls2
     ns::prints(ob, 3);
     // 错误：prints2为ns的成员，所以不可见
     prints2(3);
