--- a/files/第13章_分离式编译.md
+++ b/files/第13章_分离式编译.md
@@ -1,3 +1,4 @@
+[TOC]
 # 第十三章 分离式编译
 
 # 13.1 概念
@@ -12,14 +13,14 @@ C++语言支持所谓的分离式编译（separate compilation）。
 
 # 13.2 代码的翻译过程
 
-我们的程序代码通常是由多个代码文件组成的，其中包含头文件和源文件(对于windows系统来说，c++语言的头文件通常以.h为后缀，源文件通常以.cpp为后缀)。
-从程序代码到程序运行，我们需要进行程序代码的翻译工作，翻译工作都是由c++的编译器驱动程序进行的，编译器驱动程序会对程序所有的代码进行一些操作，这些操作也就是我们之前所讲的c++代码翻译的四大阶段。
+我们的程序代码通常是由多个代码文件组成的，其中包含头文件和源文件(对于Windows系统来说，C++语言的头文件通常以`.h`为后缀，源文件通常以`.cpp`为后缀)。
+从程序代码到程序运行，我们需要进行程序代码的翻译工作，翻译工作都是由c++的编译器驱动程序进行的，编译器驱动程序会对程序所有的代码进行一些操作，这些操作也就是我们之前所讲的C++代码翻译的四大阶段。
 
 我们再回顾以下这四个阶段，其中有需要注意的几个地方：
 
 ## 13.21 预处理阶段
 
-1. 在预处理阶段，预处理器会对程序代码中的每个代码文件(.cpp/.h)独立地执行其所有的预处理指令，并将其中的每行注释替换成一行空行。每个文件处理完后的所有代码保存在一个预处理文本文件(.i)中。
+1. 在预处理阶段，预处理器会对程序代码中的每个代码文件`.cpp/.h`独立地执行其所有的预处理指令，并将其中的每行注释替换成一行空行。每个文件处理完后的所有代码保存在一个预处理文本文件`.i`中。
    `#include`也是预处理指令之一，它的作用就是将指定的文件的所有内容包含在指令出现的位置，该指令会自动展开包含文件的代码到该使用位置，如果该包含文件也有预处理指令，则也执行该指令。
    所以为了防止包含文件时出现重复定义，我们需要在被包含文件中使用宏和条件编译(这几个操作的综合也就叫做头文件保护符(header guard))来防止多次包含该文件的内容。
 
@@ -78,10 +79,10 @@ int main()
 
 ## 13.22 编译阶段
 
-2. 在编译阶段，编译器会独立地检查所有从程序代码转换而成的预处理文本文件(.i)，也就是只检查该文件中的代码，而不会考虑其他文件对其的影响。当某个预处理文本文件通过了编译检查时，编译器会将该文件里的所有代码翻译成一种能被汇编语言程序所识别的代码，所有翻译后的代码保存在一个汇编文本文件(.s)中。
+2. 在编译阶段，编译器会独立地检查所有从程序代码转换而成的预处理文本文件`.i`，也就是只检查该文件中的代码，而不会考虑其他文件对其的影响。当某个预处理文本文件通过了编译检查时，编译器会将该文件里的所有代码翻译成一种能被汇编语言程序所识别的代码，所有翻译后的代码保存在一个汇编文本文件`.s`中。
    其中，有以下几点需要注意：
    1. 编译器在进行编译检查时，如果我们使用了某个对象(包括普通函数、类的非类类型、类的非成员模板和模板实例)时，编译器会检查这些对象的声明是否在该作用域中存在：
-        * 对于声明存在但定义不存在的对象，编译器会在汇编文本文件(.s)中做一个标记，告诉之后的链接器在链接的时候去找该对象的定义，把问题移交给链接器，此时不会触发编译出错。
+        * 对于声明存在但定义不存在的对象，编译器会在汇编文本文件`.s`中做一个标记，告诉之后的链接器在链接的时候去找该对象的定义，把问题移交给链接器，此时不会触发编译出错。
         * 如果编译时，该对象的声明存在但其定义不匹配，或者该对象有多个不匹配的声明或者定义时，就会编译出错。
    2. 但是当我们在不符合不完全类型的使用情形时，使用了某类型(包括类类型和类模板)，则编译器不仅会检查其声明，还会检查是否存在对应的定义，否则编译出错。
    3. 对于模板来说，模板的实例化只会在编译阶段进行，生成的实例(也就是实例定义)包含以下部分：
@@ -273,7 +274,7 @@ g++ -S test.cpp
 
 ## 13.23 汇编阶段
 
-3. 在汇编阶段期间，汇编器会独立地将所有从程序代码转换而成的汇编文本文件(.s)翻译成机器代码，也叫做机器语言指令(也就是由二进制值组成的代码，计算器能够识别的代码)，并将这些机器语言指令打包成一种叫做可重定位目标程序(relocate object program)的格式，最后将每个文件的打包结果保存在一个为其创建的目标文件(.o)中。
+3. 在汇编阶段期间，汇编器会独立地将所有从程序代码转换而成的汇编文本文件`.s`翻译成机器代码，也叫做机器语言指令(也就是由二进制值组成的代码，计算器能够识别的代码)，并将这些机器语言指令打包成一种叫做可重定位目标程序(relocate object program)的格式，最后将每个文件的打包结果保存在一个为其创建的可重定位目标文件`.o`中。
 
 ```c++
 // 在windows系统上使用GNU编译器套件进行C++的代码翻译
@@ -315,9 +316,9 @@ g++ -c test.cpp
 
 ## 13.24 链接阶段
 
-4. 在链接阶段，链接器会把所有从程序代码转换而成的目标文件(.o)链接到一起，并进行检查合并：
+4. 在链接阶段，链接器会把所有从程序代码转换而成的目标文件`.o`链接到一起，并进行检查合并：
    链接器会将所有对象的声明和定义链接在一起，如果链接器在链接时发现有对象进行了重复定义，或者是该对象的声明和定义不匹配，又或者是某句使用了未定义的对象(此时，使用了未实例化的实例的地方就会被认为是使用了未定义对象)，则会链接出错。
-   当所有地方都链接无误后，链接器就会形成一个可执行文件(.exe)，此时程序才真正可以在操作系统中运行。
+   当所有地方都链接无误后，链接器就会形成一个可执行文件`.exe/.out`，此时程序才真正可以在操作系统中运行。
 
 ```c++
 // 在windows系统上使用GNU编译器套件进行C++的代码翻译
