--- a/files/第14章_固有的不可移植特性.md
+++ b/files/第14章_固有的不可移植特性.md
@@ -1,3 +1,4 @@
+[TOC]
 # 第十四章 固有的不可移植特性
 
 # 14.1 不可移植特性的概念
@@ -7,7 +8,7 @@
 对于C++的不可移植特性，一般有以下几种：
 * 算术类型的所占字节的大小
 * 位域
-* volatile限定符
+* `volatile`限定符
 * 链接指示
 
 算术类型的所占字节的大小我们在将数据类型时介绍过，接下来我们主要介绍后三种不可移植特性。
@@ -59,17 +60,16 @@ cout << obj.bits;
 # 14.3 volatile限定符
 
 直接处理硬件的程序常常包含这样的数据元素，它们的值由程序直接控制之外的过程控制。例如，程序可能包含一个由系统时钟定时更新的变量。
-当对象的值可能在程序的控制或检测之外被改变时，应该将该对象声明为volatile，关键字volatile告诉编译器不应对这样的对象进行优化。
+当对象的值可能在程序的控制或检测之外被改变时，应该将该对象声明为`volatile`，关键字`volatile`告诉编译器不应对这样的对象进行优化。
 
-volatile限定符的用法和const几乎一样，遵循各种const的规则，且const能和volatile同时作用与一个对象中。
+`volatile`限定符的用法和`const`几乎一样，遵循各种`const`的规则，且`const`能和`volatile`同时作用与一个对象中。
 
-一般定义volatile对象的语句形式为
-> volatile 类型说明符 变量名 (初始化);
-> 或
-> 类型说明符 volatile 变量名 (初始化);
+一般定义`volatile`对象的语句形式为
+1. > volatile 类型说明符 变量名 (初始化);
+2. > 类型说明符 volatile 变量名 (初始化);
 
-类的非静态函数成员能定义成const成员函数，所以非静态函数成员也能定义成volatile的。
-volatile对象为类类型时，其不能使用该类型的非volatile的非静态成员函数。
+类的非静态函数成员能定义成`const`成员函数，所以非静态函数成员也能定义成`volatile`的。
+`volatile`对象为类类型时，其不能使用该类型的非`volatile`的非静态成员函数。
 
 ```c++
 struct Cls
@@ -86,18 +86,18 @@ obj.prints(15);
 obj.nprints();
 ```
 
-volatile限定符的用法有一点与const不同，这也就是：
-我们不能使用合成的拷贝/移动构造函数及赋值运算符来初始化或赋值类类型中的volatile数据成员。
-所以我们必须自定义这些函数来初始化或赋值volatile数据成员。
+`volatile`限定符的用法有一点与`const`不同，这也就是：
+我们不能使用合成的拷贝/移动构造函数及赋值运算符来初始化或赋值类类型中的`volatile`数据成员。
+所以我们必须自定义这些函数来初始化或赋值`volatile`数据成员。
 
 # 14.4 链接指示
 
 C++程序有时需要调用其他语言编写的函数，或者其他语言有时也需要调用C++编写的函数，最常见的是C和C++。
 C++使用链接指示（linkage directive）指出任意非C++函数所用的语言。
 
-> 链接指示语句只能用c++编译器编译，所以所有涉及到链接指示语句的文件要用c++编译器编译。
+> 链接指示语句只能用C++编译器编译，所以所有涉及到链接指示语句的文件要用C++编译器编译。
 
-> 要想把C++代码和其他语言（包括C语言）编写的代码放在一起使用(也就是相互都可以使用)，要求我们所使用的c++编译器必须能够有权访问该语言的编译器，并且也兼容这个语言的编译器。
+> 要想把C++代码和其他语言（包括C语言）编写的代码放在一起使用(也就是相互都可以使用)，要求我们所使用的C++编译器必须能够有权访问该语言的编译器，并且也兼容这个语言的编译器。
 
 ## 14.41 C++调用其他语言的函数
 
@@ -106,9 +106,8 @@ C++使用链接指示（linkage directive）指出任意非C++函数所用的语
 
 链接指示可以有两种形式：单个的或复合的：
 
-> extern 字符串字面值 函数声明或定义语句
-> 
-> extern 字符串字面值 { 多个函数的声明或定义语句 }
+1. > extern 字符串字面值 函数声明或定义语句
+2. > extern 字符串字面值 { 多个函数的声明或定义语句 }
 
 这两种形式都是首先包含一个关键字`extern`，后面跟是一个字符串字面值以及一个普通的函数声明或定义。
 
@@ -118,7 +117,7 @@ C++使用链接指示（linkage directive）指出任意非C++函数所用的语
 
 对于第二种花括号括起的形式，它可以支持多个其他语言函数的链接指示。
 花括号的作用是将其中的多个声明或定义聚合在一起，一次性建立多个链接，花括号中声明或定义的函数名字就是可见的，就好像在花括号之外声明或定义的一样。
-花括号中还可以包含`#include指令`，当一个`#include指令`被放置在的花括号中时，头文件中的所有普通函数声明或定义都会被认为是由链接指示的语言编写的。
+花括号中还可以包含`#include`指令，当一个`#include`指令被放置在的花括号中时，头文件中的所有普通函数声明或定义都会被认为是由链接指示的语言编写的。
 
 链接指示可以嵌套，如果花括号中包含带自带链接指示的函数，则该函数的还是按自己的链接来，不受外层链接指示的影响。
 
