--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -3348,11 +3348,11 @@ delete ptr;
 
 ### 7.94 拷贝控制成员的执行顺序
 
-拷贝/移动构造函数、拷贝/移动赋值运算符的执行顺序和普通构造函数的顺序一模一样；而构造函数的顺序与普通构造函数的顺序正好相反。
+拷贝/移动构造函数、拷贝/移动赋值运算符的执行顺序和普通构造函数的顺序一模一样；而析构函数的顺序与普通构造函数的顺序正好相反。
 
 对于在继承关系的类的拷贝控制成员，它们会调用每个基类自己对应的拷贝控制成员来执行对应基类部分的对应操作。
 
-以下为非构造函数的拷贝控制成员的执行顺序(构造函数的顺序与其全部相反，包括按其定义或派生顺序都相反)：
+以下为非析构函数的拷贝控制成员的执行顺序(析构函数的顺序与其全部相反，包括按其定义或派生顺序都相反)：
 1. 先按其派生列表顺序逐个调用其虚基类的拷贝\移动构造函数或者拷贝\移动赋值运算符进行该虚基类的成员操作(同名虚基类就进行一次)；每个虚基类也是如此做。
 2. 然后按其派生列表顺序逐个调用其非虚基类的直接基类的拷贝\移动构造函数或者拷贝\移动赋值运算符进行成员操作；每个类(包括虚基类)也是如此做。
 3. 最后按其非static成员的定义顺序逐个进行拷贝\移动；每个类(包括虚基类)也是如此做。
