--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -261,9 +261,9 @@ void prints(ty obj)
     // 正确：显式指定cls_int为类类型成员。
     typename ty::cls_int val = 35;
     // 错误：编译器认为iterator为静态成员，所以出错。
-    typename std::vector<numType>::iterator iter;
+    std::vector<ty>::iterator iter;
     // 正确：显式指定iterator为类类型成员。
-    typename std::vector<numType>::iterator iter2;
+    typename std::vector<ty>::iterator iter2;
     cout << obj.ins + val;
 }
 struct Cls
