--- a/files/第2章_基本类型与变量3.md
+++ b/files/第2章_基本类型与变量3.md
@@ -80,12 +80,13 @@ int &r2 = ci;  //错误：试图让一个非常量引用指向一个常量对象
 之前说过，引用的类型必须与其所引用对象的类型一致，不能用常量引用来初始化非常量引用。
 > 右值常量引用同样遵循这个规则，不能用常量引用来初始化右值非常量引用。
 
-> 要注意，因为右值引用只能绑定到右值对象上，对于右值来说，不存在不能被修改的右值，所以不管是右值引用还是右值常量引用都能绑定到对应类型的任意右值对象上。
+> 要注意，不管是右值引用还是右值常量引用都能绑定到对应类型的字面值常量上。
 
 ```c++
 const int &&r1 = 84;
 const int &&r2 = std::move(r1); // 正确：右值常量引用来初始化右值常量引用。
 int &&r3 = std::move(r1); // 错误：不能用右值常量引用来初始化右值非常量引用。
+int &&r4 = 53; // 正确：右值引用可以由字面值常量来初始化。
 ```
 
 左值常量引用能够用任意表达式作为初始值，尤其，允许为一个常量引用绑定对应类型的常量或非常量引用、非常量的对象、字面值，甚至是个一般表达式(也就是左值常量引用能够绑定到右值上了)：
