--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -1470,8 +1470,8 @@ br.Ba::prints("strs");
 为此，我们可以为想要重载的函数成员提供一条`using`声明语句，形式为：
 > using 基类名::重载函数名;
 
-一条基类成员函数的`using`声明语句的作用是把该函数对应的所有重载函数添加到派生类作用域中。
-此时，派生类自己定义的重载版本就可以与该基类对应的所有重载版本一起重载了。
+一条基类成员函数的`using`声明语句的作用是把该基类中的该函数对应的所有重载函数（不包括此基类继承的，但包括此基类用`using`声明语句所添加的）添加到这个调用派生类的作用域中。
+此时，派生类自己定义的重载版本就可以与基类对应的重载版本一起重载了。
 
 > 声明的基类不一定要是直接基类，可以是派生类的任何基类。
 
@@ -1502,6 +1502,34 @@ ob.pri('a');
 ob.pri(6);
 // 错误：基类Ba的pri被隐藏。
 ob.pri(string("good"));
+```
+
+> 用`using`声明语句添加的函数的访问权限由该`using`声明语句所在位置的访问权限来决定的，并且这些访问权限的更改是永久的，是可继承的。
+
+```c++
+class Ba0
+{
+protected:
+    void pri(bool val) { std::cout << val << " Ba0\n"; }
+    void pri(char val) { std::cout << val << " Ba0\n"; }
+};
+class Ba: public Ba0
+{
+public:
+    using Ba0::pri;
+    void pri(int val) { std::cout << val << " Ba\n"; }
+    void pri(double val) { std::cout << val << " Ba\n"; }
+    void pri(std::string val) { std::cout << val << " Ba\n"; }
+};
+
+int main()
+{
+    Ba obj;
+    // 正确：调用void pri(bool val)
+    // 输出1 Ba0
+    obj.pri(true);
+    return 0;
+}
 ```
 
 要注意，`using`声明语句中基类的对应函数的每个重载版本要在派生类中*都可访问*，否则编译出错。
@@ -2055,14 +2083,14 @@ struct Der2: protected Cls {};
 
 #### 7.623 用using声明语句调整访问权限
 
-我们有一种特殊的方法可以调整类成员的访问权限，也就是在类的内部使用`using`声明语句在调整。
+我们有一种特殊的方法可以调整类成员的访问权限，也就是之前在*7.454 覆盖重载的函数*中提到的`using`声明语句。使用`using`声明语句可以用来调整成员的访问权限。
 
 我们可以将该类的直接或间接基类中的任何可访问成员（例如，非私有成员）在`using`声明语句中显式指明出来。
 
 形式为：
 > using 基类名::成员名;
 
-给定基类中所有该定义类可访问的给定名字的成员的访问权限由该`using`声明语句所在位置的访问权限来决定，并且对这些成员访问权限的更改是永久的，是可继承的。
+给定基类中所有该定义类可访问的给定名字的成员的访问权限由该`using`声明语句所在位置的访问权限来决定的，并且对这些成员访问权限的更改是永久的，是可继承的。
 
 ```c++
 struct Ba0
