--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -228,8 +228,8 @@ class Screen; // Screen类的声明
 
 类就像普通的类型一样，可以用于定义或声明该类的对象，定义或声明类对象的形式有三种：
 * 类的定义 类对象名1 (可选 初始化), 类对象名2 (可选 初始化), ···;
-* (可选 存储说明符) class/struct 类名(可含类型修饰符) 类对象名 (可选 初始化)
-* (可选 存储说明符) 类名(可含类型修饰符) 类对象名 (可选 初始化)
+* (可选 存储说明符) class/struct 类名(可含类型修饰符) 类对象名 (可选 初始化);
+* (可选 存储说明符) 类名(可含类型修饰符) 类对象名 (可选 初始化);
 
 第一种形式就是之前所描述的在定义时创建类对象；
 第二种形式就是在类对象定义前加关键字`class`或者`struct`(这两个效果一样)；
@@ -246,11 +246,13 @@ struct Cls ob4;
 Cls ob5;
 ```
 
+> 类对象的初始化就是调用类的构造函数来进行初始化工作，类对象的初始化形式有多种，具体形式以及调用规则详见*7.313 类对象的初始化*。
+
 #### 7.312 类的调用
 
 C++中的几乎所有类型(包括内置类型、类类型，共用体类型等)都支持类似于函数调用形式的使用，也就是将类当做函数，后面跟着圆括号包围的实参表，类的调用其实是隐式调用该类的构造函数，然后返回一个临时的该类对象。所以可以根据实参的不同调用相应的该类构造函数。
 形式为:
-> 类名 (实参表)/{实参表}
+> 类名 (实参表)/{实参表};
 
 和函数不一样的是，类调用的实参表可以用花括号包含起来。
 
@@ -279,13 +281,56 @@ Cls obj2 = Cls{3};
 Cls obj3 = Cls("string");
 ```
 
-#### 7.313 初始化形式再探
+#### 7.313 类对象的初始化
 
-之前我们说过直接初始化和拷贝初始化的形式的区别，简单来说，就是所有不用赋值运算符的初始化都是直接初始化。
+类对象和普通的对象一样，有着直接初始化和拷贝初始化这两种初始化形式。之前我们说过直接初始化和拷贝初始化的形式的区别，简单来说，就是所有不用赋值运算符的初始化都是直接初始化。
 
 对于类对象的直接初始化和拷贝初始化，它们的区别也就在与它们之间的工作原理：
 * 直接初始化：
   当使用直接初始化时，我们实际上是要求编译器使用类似于普通函数匹配的方式，來选择与我们所提供的参数最匹配的构造函数。所以直接初始化时，所有构造函数都会是候选函数(包括拷贝和移动构造函数)。
+  类对象的直接初始化的形式和上面的类的调用相似，形式为：
+  > (可选 存储说明符) 类名(可含类型修饰符) 类对象名 (实参表)/{实参表};
+  ```c++
+  // 一个含有多个构造函数的类Cls
+  struct Cls
+  {
+     int ins;
+     string str;
+     double dou;
+     Cls(int ins, string str, double dou): ins(ins), str(str), dou(dou) {}
+     Cls(int ins): Cls(ins, "", 5.5) {}
+     Cls(string str): Cls(3, str, 5.5) {}
+     Cls():ins(3), str("default"), dou(2.4) {}
+  };
+  // 调用Cls(int, string, double)
+  Cls obj{3,"str", 8.8};
+  // 调用Cls(int)
+  Cls obj2{3};
+  // 调用Cls(string)
+  Cls obj3("string");
+  // 调用Cls()
+  Cls obj4;
+  ```
+  > 要注意，当需要类的默认构造函数来初始化类对象时，该类对象不能用空园括号`()`来初始化，会被编译器误认为为函数声明，而出错。可以使用空花括号`{}`以及不加括号来调用默认构造函数。
+  ```c++
+  // 一个含有多个构造函数的类Cls
+  struct Cls
+  {
+     int ins;
+     string str;
+     double dou;
+     Cls(int ins, string str, double dou): ins(ins), str(str), dou(dou) {}
+     Cls(int ins): Cls(ins, "", 5.5) {}
+     Cls(string str): Cls(3, str, 5.5) {}
+     Cls():ins(3), str("default"), dou(2.4) {}
+  };
+  // 正确，调用默认构造函数Cls()
+  Cls obj{};
+  // 正确，调用默认构造函数Cls()
+  Cls obj2;
+  // 错误，该语句为函数声明Cls()，不是类对象的初始化。
+  Cls obj3();
+  ```
 * 拷贝初始化：
   当我们使用拷贝初始化时，我们是要求编译器将右侧的同类型运算对象拷贝到正在创建的对象中；如果右侧运算对象不是同类型的对象，则还要对其进行类型转换(其中可能会用到转换构造函数来执行转换)。
   对于拷贝初始化，编译器会根据所要拷贝的初始值的左右值属性来决定应该调用拷贝还是移动构造函数，还有可能会跳过拷贝或者移动构造函数直接创建。
