--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -311,9 +311,11 @@ Cls obj3 = Cls("string");
   // 调用Cls()
   Cls obj4;
   ```
-  > 要注意，当需要类的默认构造函数来初始化类对象时，该类对象不能用空园括号`()`来初始化，会被编译器误认为为函数声明，而出错。可以使用空花括号`{}`以及不加括号来调用默认构造函数。
+  要注意，当需要类的默认构造函数来初始化类对象时，该类对象不能用空园括号`()`来初始化，会被编译器误认为为函数声明，而出错。可以使用空花括号`{}`以及不加括号来调用默认构造函数。
+  > 这种错误也会在调用其他构造函数时嵌套使用空园括号`()`初始化时发生，因此类对象的直接初始化最好使用花括号`{}`来进行，以免存在潜在错误。
   ```c++
   // 一个含有多个构造函数的类Cls
+  using namespace std;
   struct Cls
   {
      int ins;
@@ -328,8 +330,10 @@ Cls obj3 = Cls("string");
   Cls obj{};
   // 正确，调用默认构造函数Cls()
   Cls obj2;
-  // 错误，该语句为函数声明Cls()，不是类对象的初始化。
+  // 错误，该语句会被认为为函数声明Cls()，而不是类对象的初始化。
   Cls obj3();
+  // 错误，该语句会被认为为函数声明Cls(string)，而不是类对象的初始化。
+  Cls obj4(string());
   ```
 * 拷贝初始化：
   当我们使用拷贝初始化时，我们是要求编译器将右侧的同类型运算对象拷贝到正在创建的对象中；如果右侧运算对象不是同类型的对象，则还要对其进行类型转换(其中可能会用到转换构造函数来执行转换)。
