--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -89,6 +89,69 @@ prints();
 > 函数模板中的函数形参和局部变量名或者类模板的成员名也不能与所属的模板形参表中的形参名相同。
 
 和函数形参一样：
+* 模板形参可以存在于模板定义中任何需要使用该形参的位置。
+  ```c++
+  #include <vector>
+  // 函数模板
+  template<typename T, uint64_t N>
+  T sumForList(const T (&list)[N])
+  {
+      // 使用了模板形参中的类型形参T作为类型
+      T sum = 0;
+      // 使用了模板形参中的非类型形参N作为变量
+      for (uint64_t i = 0; i < N; ++i)
+          sum += list[i];
+      return sum;
+  }
+  // 类模板
+  template<typename T, uint64_t N, template<class Type> typename Cls>
+  class Matrix
+  {
+      // 使用了模板形参中的模板类形参Cls、类型形参T和非类型形参N作为类型
+      Cls<T> list[N];
+  public:
+      // 使用了模板形参中的模板类形参Cls、类型形参T和非类型形参N作为函数形参类型
+      explicit Matrix(const Cls<T> (&matrix)[N])
+      {
+          for (uint64_t i = 0; i < N; ++i)
+              list[i] = matrix[i];
+      }
+      // 使用了模板形参中的模板类形参Cls、类型形参T作为初始化值类型
+      Matrix(): list({Cls<T>{}}) {}
+      void print()
+      { printMatrix(list); }
+      // 使用了模板形参中的模板类形参Cls、类型形参T作为函数形参类型
+      static void printMatrix(const Cls<T> (&matrix)[N])
+      {
+          // 使用了模板形参中的模板类形参Cls、类型形参T作为变量类型
+          for (const Cls<T>& list: matrix)
+          {
+              uint64_t len = list.size();
+              std::cout << "[";
+              if (len > 0)
+                  std::cout << list[0];
+              for (uint64_t i = 1; i < len; ++i)
+                  std::cout << ", " << list[i];
+              std::cout << "]" << std::endl;
+          }
+      }
+  };
+  int main()
+  {
+      int64_t arrs[] = {5,8,9,6,-11,0,6,3,25,-48};
+      // 输出3
+      std::cout << sumForList(arrs) << std::endl;
+      std::vector<int32_t> matrix[] = {{2,5,0,-48},{-89,0,33,28},{-78,93,0,12}};
+      Matrix<int32_t, 3, std::vector> obj(matrix);
+      /* 输出
+        [2, 5, 0, -48]
+        [-89, 0, 33, 28]
+        [-78, 93, 0, 12]
+      */
+      obj.print();
+      return 0;
+  }
+  ```
 * 模板声明中的模板形参名不必与定义中相同，甚至还可以省略。
 * 如果我们不需要用某个模板形参，我们就可以在模板定义中省略该形参的名字。
 
@@ -173,7 +236,7 @@ struct Cls
     ty str = "str";
     int ins = val;
 };
-// 正确：输出str 3
+// 正确：默认实参以prints的为主，因此输出str 3
 prints<Cls>();
 ```
 
@@ -429,10 +492,9 @@ int main()
 
 模板直到实例化吋才会生成代码，这一特性影响了我们何时才会获知模板内代码的编译错误。通常，编译器会在三个阶段报告错误：
 1. 编译模板自身阶段：
-   在这个阶段，编译器会对所有非模板形参的名字进行名字查找(不会进行类型检查)以及各种语法错误检查，例如忘记分号、变量名拼错，包扩展使用错误等，但也就这么多了。
+   在这个阶段，编译器只会对模板中的所有不依赖于模板参数的名字进行名字查找(不会进行类型检查)以及各种语法错误检查，例如忘记分号、变量名拼错等，但也就这么多了。
 2. 模板使用阶段：
-   在此阶段，编译器仍然没有很多可检查的，编译器通常会检查模板中的模板实参数目是否正确。
-   对于函数模板，还会检查函数形参的数量和类型是否匹配。
+   在此阶段，编译器才会检查与模板参数有关的部分。通常会检查模板中的模板实参数目是否正确；对于函数模板，还会检查函数形参的数量和类型是否匹配。但除此之外，编译器仍然没有很多可检查的。
 3. 模板实例化阶段：
    编译器只有在这个阶段才能发现类型相关的错误，依赖于编译器如何管理实例化，这类错误可能在链接时才会报告。
    在这一阶段，编译器会检查该模板内的模板调用和函数调用是否匹配。
@@ -480,11 +542,89 @@ int main()
 }
 ```
 
+> **注意：** 由于模板编译流程的特性，当某模板类的基类是类模板，且基类的类模板使用了模板参数时，如果该模板类直接使用基类的成员，则会报错说找不到该成员，解决方法就是显式使用该成员。
+> 
+> ```c++
+> // 类模板，充当基类
+> template<typename T>
+> struct Base
+> { 
+>     int32_t intObj{55}; 
+> };
+> 
+> // 普通类继承模板基类，基类已实例化
+> struct GeneralCls: Base<int>
+> {
+>     void test()
+>     {
+>         // 正确：模板基类没有使用模板参数
+>         int32_t intt = intObj;
+>         std::cout << intt << std::endl;
+>     }
+> };
+> 
+> // 类模板继承模板基类，基类已实例化
+> template<typename T, int32_t N>
+> struct TemplateCls: Base<int32_t>
+> {
+>     T set[N];
+>     void test()
+>     {
+>         // 正确：模板基类没有使用模板参数
+>         int32_t intt = intObj;
+>         std::cout << intt << std::endl;
+>     }
+> };
+> 
+> // 类模板继承模板基类，基类未实例化
+> template<typename T, int32_t N>
+> struct TemplateCls2: Base<T>
+> {
+>     T set[N];
+>     void test()
+>     {
+>         /* 
+>             错误：
+>             模板基类Base使用了模板参数，
+>             在模板TemplateCls2编译的第一阶段会忽略掉该基类Base的检查。
+>             因此编译器在第一阶段对intObj进行名字查找时由于忽略了基类Base，
+>             会出现找不到成员的错误。
+>             解决方法就是显式指明intObj的来源，如
+>             int32_t intt = this->intObj;
+>             int32_t intt = Base<T>::intObj;
+>         */
+>         int32_t intt = intObj;
+>         std::cout << intt << std::endl;
+>     }
+> };
+> ```
+
 ### 10.52 实例化分类
 
 模板实例化的方法有以下几种：
 * 隐式实例化
 * 显式实例化
+
+> **注意：** 不管隐式还是显式实例化，在模板实参列表中不能含有任何模板形参，否则就不能实例化了。
+> ```c++
+> // 类模板，充当基类
+> template<typename T>
+> struct Base
+> { 
+>     T obj;
+> };
+> // 类模板
+> template<typename T>
+> struct TemplateCls
+> {
+>     // 错误：Base已被隐式实例化，而Base里不存在fakeObj成员，因此会报错
+>     int32_t int32Obj = Base<int32_t>::fakeObj;
+>     // 正确：Base已被隐式实例化，Base里存在类型相同的obj成员，编译通过
+>     int32_t int32Obj = Base<int32_t>::obj;
+>     // 正确：Base未被实例化，Base里存在类型相同的obj成员，编译通过
+>     int32_t int32Obj2 = Base<T>::fakeObj;
+>  };
+> ```
 
 ### 10.53 隐式实例化
 
@@ -496,7 +636,7 @@ int main()
 
 #### 10.531 显式模板实参列表
 
-显式模板实参列表(explicit template argument)也叫做模板实参表，它显式给出模板的各个实参，编译器通过这些实参来实例化具体的函数或类。
+显式模板实参列表(explicit template argument)也叫做模板实参表，它显式给出模板的各个实参，编译器通过这些实参来实例化具体的函数或类（所以实参表中不能含有任何模板形参）。
 
 使用模板实参表的形式为：
 > 模板名 <模板实参表>
@@ -587,20 +727,49 @@ template <typename ty>
 void prints2(ty v1, ty v2) {}
 const int ins = 48;
 int ar[3] = {8,15,6};
-// ty为int
-prints(ins);
-// ty为int*
-prints(ar);
-// 正确：两个实参的类型一致
-prints2(3.45, 6.15);
-// 错误：第一个为double，第二个为int
-prints2(3.45, 6);
-// 正确
-void (*ptr) (string) = prints;
-// 正确
-void (*ptr2) (int, int) = prints2;
-// 错误：第一个为double，第二个为int
-void (*ptr3) (int, double) = prints2;
+int main()
+{
+  // ty为int
+  prints(ins);
+  // ty为int*
+  prints(ar);
+  // 正确：两个实参的类型一致
+  prints2(3.45, 6.15);
+  // 错误：第一个为double，第二个为int
+  prints2(3.45, 6);
+  // 正确
+  void (*ptr) (string) = prints;
+  // 正确
+  void (*ptr2) (int, int) = prints2;
+  // 错误：第一个为double，第二个为int
+  void (*ptr3) (int, double) = prints2;
+}
+```
+```c++
+template<typename T, int N>
+T sumForList(const T list[N])
+{
+    T sum = 0;
+    for (int i = 0; i < N; ++i)
+        sum += list[i];
+    return sum;
+}
+template<typename T, int N>
+T sumForList2(const T (&list)[N])
+{
+    T sum = 0;
+    for (int i = 0; i < N; ++i)
+        sum += list[i];
+    return sum;
+}
+int main()
+{
+    int64_t arrs[] = {5,8,9,6,-11,0,6,3,25,-48};
+    // 错误：数组名arrs被转换成对应的指针，因此无法自动推断非类型参数N的值
+    std::cout << sumForList(arrs) << std::endl;
+    // 正确：list为arrs的引用，因此可以推断非类型参数N的值为10
+    std::cout << sumForList2(arrs) << std::endl;
+}
 ```
 
 > 对于满足以下任意一个条件的函数形参来说，其适用于正常的类型的转换：
@@ -685,7 +854,7 @@ prints2(8);
 显式实例化声明的形式为：
 > extern template 模板的隐式实例化声明
 
-模板的隐式实例化声明类似于隐式实例化，也就是该模板中的所有模板形参都含有模板实参的声明形式。
+模板的隐式实例化声明类似于隐式实例化，也就是该模板中的所有模板形参都含有模板实参的声明形式（所以如果有显式实参表，则其中不能含有任何模板形参）。
 对于类模板来说，就是其类关键字加上使用显式实参表的形式；对于函数模板来说，是显式实参表或者实参推断的形式的函数声明形式(也就是含有返回类型和函数形参表的函数声明，其中所有模板形参的类型都换为该形参的实参)。
 
 ```c++
@@ -987,10 +1156,10 @@ Newcls2<double> n2_obj2;
 
 因为类模板是一个模板，当模板成员或者友元需要使用该模板类型时(比如定义构造函数等)，除了一个例外，我们必须要像类模板的隐式实例化一样提供模板实参表来使用，该实参表的实参要与模板形参一一对应(对于有默认实参的形参，可以省略其实参)。
 
-对于该实参表的实参，可以是以下任意一种(由于未命名形参没有名字，所以其只能用第1种方式)：
-1. 实参可以是具体的对象、类型或者模板(对应非类型、类型、模板类形参和模板参数包)：
+该模板实参表中可以包含以下任意一种(由于未命名形参没有名字，所以其只能用第1种方式)：
+1. 可以是任何实参，也就是具体的对象、类型或者模板(对应非类型、类型、模板类形参和模板参数包)：
   此时该位置的模板类型对应的模板形参的实参就是所给的实参。
-2. 实参可以是含有模板形参名的非声明或定义的复杂表达式(比如类型形参的引用，非类型形参与其他表达式的运算等等)或者模板参数包的扩展：
+2. 可以是含有模板形参名的非声明或定义的表达式(比如类型形参的引用，非类型形参与其他表达式的运算等等)或者模板参数包的扩展：
   此时该位置的模板类型对应的模板形参的实参还是由该模板的实例所决定。
 
 ```c++
@@ -1001,21 +1170,31 @@ struct Cls
     int ins = val;
     void prints() 
     {
-        // 使用该模板类型，所以需要提供模板实参表。
+        // 模板实参表包含实参和模板形参
         Cls<int, val + 10> obj; 
-        cout << obj.mem + obj.ins; 
+        std::cout << obj.mem + obj.ins << std::endl;
+    }
+    void prints2()
+    {
+        // 模板实参表包含模板形参和实参
+        Cls<const ty*, 25> obj2;
+        obj2.mem = "this is string";
+        std::cout << obj2.mem << obj2.ins << std::endl;
     }
 };
 int main()
 {
-    Cls<string, 105, int> ob;
+    Cls<std::string, 105, int> ob;
     // 输出115
     ob.prints();
+    Cls<char, 105, int> ob2;
+    // 输出this is string 25
+    ob2.prints2();
     return 0;
 }
 ```
 
-该例外就是：
+*该例外就是*：
 当我们在模板的作用域内使用该模板类型时，可以不用提供模板实参表，此时编译器会自动帮我们加上模板实参表，每个实参都为对应的形参名(无名的形参就填一个无名标记)。
 
 ```c++
