--- a/files/第5章_函数.md
+++ b/files/第5章_函数.md
@@ -579,6 +579,11 @@ void print(int (&arr)[10])
 {
     for (auto elem : arr)cout << elem << endl;
 }
+//错误：必须要指定维度的大小
+void print2(int (&arr)[])
+{
+    for (auto elem : arr)cout << elem << endl;
+}
 ```
 ```c++
 int i = 0, j[2] = {0, 1};
