--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -429,6 +429,7 @@ Cls obj2 = Cls::Cls(3,"str",1.3);
 * 直接访问：其所属类的所有成员(包括自己)。
 * 间接访问：其所属类的所有成员(包括自己)。
   * 通过所属类对象访问。
+  * 通过作用域运算符被访问。
 
 当非静态成员作为被访问者时
 * 直接被访问：其所属类的所有非静态成员(包括自己)。
@@ -499,7 +500,7 @@ void Cls::prints() {};
 double Cls::dou = 78.6;
 ```
 
-> 除了能在类内定义的静态数据成员可以在类外声明以外，其他成员都不能在类外声明。
+> 除了静态非constexpr数据成员可以在类外定义，其他的数据成员都不能在类外定义。
 
 > 对于所有成员来说，类外和类内之间不能有重复定义。
 
