--- a/files/第7章_类类型.md
+++ b/files/第7章_类类型.md
@@ -427,27 +427,70 @@ Cls obj2 = Cls::Cls(3,"str",1.3);
 
 当非静态成员作为访问者时：
 * 直接访问：其所属类的所有成员(包括自己)。
-* 间接访问：其所属类的所有成员(包括自己)。
+* 间接访问：其所属类的所有成员(包括自己)：
   * 通过所属类对象访问。
-  * 通过作用域运算符被访问。
+  * 通过作用域运算符访问。
 
-当非静态成员作为被访问者时
+当非静态成员作为被访问者时：
 * 直接被访问：其所属类的所有非静态成员(包括自己)。
-* 间接被访问：所有对象(包括自己)。
-  * 通过所属类对象被访问。
+* 间接被访问：
+  * 其所属类的所有非静态成员(包括自己)：
+    * 通过所属类对象被访问。
+    * 通过作用域运算符被访问。
+  * 其所属类的所有静态成员：
+    * 通过所属类对象被访问。
 
 **静态成员**
 
 当静态成员作为访问者时：
 * 直接访问：其所属类的所有静态成员(包括自己)。
-* 间接访问：其所属类的所有成员(包括自己)。
-  * 通过所属类对象访问。
+* 间接访问：
+  * 其所属类的所有静态成员(包括自己)：
+    * 通过所属类对象被访问。
+    * 通过作用域运算符被访问。
+  * 其所属类的所有非静态成员：
+    * 通过所属类对象被访问。
 
-当静态成员作为被访问者时
+当静态成员作为被访问者时：
 * 直接被访问：其所属类的所有成员(包括自己)。
-* 间接被访问：所有对象(包括自己)。
+* 间接被访问：所有对象(包括自己)：
   * 通过所属类对象被访问。
   * 通过作用域运算符被访问。
+
+```c++
+struct Cls
+{
+    // 类对象
+    static Cls classObj;
+    // 非静态数据成员
+    int inte{35};
+    // 非静态函数成员
+    int getInt() { return 31; }
+    // 静态数据成员
+    static const int inte_st = 17;
+    // 静态函数成员
+    static int getInt_st() { return 39; }
+
+    // 非静态成员被非静态成员访问
+    int nostaticDataAccessed_viaDirectly_byNostaticData = inte * 2;
+    void nostaticDataAccessed_viaClassObject_byNostaticFunc() { Cls clsObj; int obj{clsObj.inte*3}; }
+    int nostaticFuncAccessed_viaOperScope_byNostaticData = Cls::getInt() * 4;
+    // 静态成员被非静态成员访问
+    void staticDataAccessed_viaDirectly_byNostaticFunc() { int obj{inte_st*2}; }
+    int staticFuncAccessed_viaClassObject_byNostaticData = classObj.getInt_st() * 3;
+    void staticFuncAccessed_viaOperScope_byNostaticFunc() { int obj{Cls::getInt_st()*4}; }
+    // 非静态成员被静态成员访问
+    static int nostaticDataAccessed_viaClassObject_byStaticData;
+    static void nostaticFuncAccessed_viaClassObject_byStaticFunc() { Cls clsObj; int obj{clsObj.getInt()*4}; }
+    // 静态成员被静态成员访问
+    static void staticFuncAccessed_viaDirectly_byStaticFunc() { int obj{getInt_st()*2}; }
+    static int staticFuncAccessed_viaClassObject_byStaticData;
+    static void staticDataAccessed_viaOperScope_byStaticFunc() { int obj{Cls::inte_st*4}; }
+};
+Cls Cls::classObj{};
+int Cls::nostaticDataAccessed_viaClassObject_byStaticData{classObj.inte*2};
+int Cls::staticFuncAccessed_viaClassObject_byStaticData{classObj.getInt_st()*3};
+```
 
 ---
 
