--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -255,6 +255,8 @@ C++中存在两种参数包：
 
 不管是哪一种参数包，含有参数包的形参表都还可以含有其他的非参数包形参，但是每个形参表最多只能含有一个参数包，且必须要放在该形参表的末尾。
 
+#### 10.441 模板参数包
+
 含有模板参数包的模板叫做可变参数模板(variadic template)。
 
 根据模板形参的类型，模板参数包一共有三种：
@@ -297,6 +299,10 @@ struct Cls {};
 // 实例obj中的模板参数包vals中含有5个int模板形参
 Cls<15,8,123,25,8> obj;
 ```
+
+#### 10.442 函数参数包
+
+函数参数包的介绍详见<a href="#1046121-函数参数包"><span style="color:yellow;font:normal bold 18px '楷体'">函数参数包</span></a>
 
 ### 10.45 非参数包的模板形参使用
 
@@ -412,29 +418,34 @@ prints(objs)...
 和模板参数包一样，函数参数包可以包含与其类型相同的零个或多个参数(如不需要该参数包参与模板实参推断，则参数还可以是能隐式转成该参数包类型的)。
 
 ```c++
+#include <iostream>
+#include <vector>
+
 // 输出函数模板
+// 返回类型不为void的目的是使包扩展能当作实参
 template <class ty>
 int prints(ty val)
-{ cout << val << " "; return 0;}
+{ std::cout << val << " "; return 0;}
+// 因为参数包或者包扩展不能单独成为一个语句，也就是不能单独使用，必须要结合其他真正能用上的操作。所以可以使用该函数来使其生效
+void get_packet_work(...) {}
 // 该函数模板的函数形参表中含有函数参数包obj
 template <typename ...tys>
 void makes(const tys... objs)
 {
     // 等价于\
-    vector<int> v1 = {obj1,obj2,obj3,···};
+    std::vector<int> v1 = {obj1,obj2,obj3,···};
     // 其中的形参类型都为常量类型。
-    vector<int> v1 = {objs...};
-    static int first = 1;
-    if (first--)
-        // 等价于\
-        makes(prints(obj1), prints(obj2), prints(obj3), ···); 
-        makes(prints(objs)...);
+    std::vector<int> v1 = {objs...};
+    // 等价于\
+    get_packet_work(prints(obj1), prints(obj2), prints(obj3), ···);
+    get_packet_work(prints(objs)...);
 }
 
 int main()
 {
-    // 输出15 478 15 48
-    makes(15, 478, 15, 48);
+    // 因为根据函数栈的特性，参数从最后一个开始取，
+    // 所以输出为48 23 478 15
+    makes(15, 478, 23, 48);
     return 0;
 }
 ```
@@ -1218,7 +1229,7 @@ struct Cls
 * 所以在模板内我们可以直接访问可访问的成员而不需要用模板类型及其对象来访问。
 * 当我们在类模板外定义其成员时，我们并不在模板的作用域中，直到成员名遇到类名时才表示进入模板的作用域。
 
-### 10.72 类模板成员的类外定义
+### 10.73 类模板成员的类外定义
 
 类模板的成员可以在类外定义，不过因为是模板的成员，所以类外定义的形式与类类型的不一样。
 
@@ -1253,7 +1264,7 @@ int main()
 }
 ```
 
-### 10.73 成员模板
+### 10.74 成员模板
 
 一个类，无论是类类型还是类模板，都可以包含本身是模板的成员。这种成员被称为成员模板(member template)。
 
@@ -1263,7 +1274,7 @@ int main()
 
 > 成员函数模板的函数不能是虚函数，但可以是静态、常量等函数。
 
-#### 10.731 成员模板的定义
+#### 10.741 成员模板的定义
 
 根据成员模板在类类型和类模板的区别，成员模板的定义分为两种：
 * 类类型的成员模板定义
@@ -1271,7 +1282,7 @@ int main()
 
 不管是哪一种成员模板，其定义与其对应的成员定义一样，既可以在类内定义，也可以在类外定义，也遵循成员定义的各种规则。
 
-##### 10.7311 类类型的成员模板定义
+##### 10.7411 类类型的成员模板定义
 
 对于在类类型中的成员模板，其定义与类类型的成员定义一样。
 
@@ -1333,7 +1344,7 @@ void Cls::NestCls<ccy, ccval>::Nprints()
 { cout << ccval; }
 ```
 
-##### 10.7312 类模板的成员模板定义
+##### 10.7412 类模板的成员模板定义
 
 成员模板也是模板，定义形式和其对应类型的模板定义形式一样，类模板的成员模板和其所在的类模板之前各有自己的独立的模板形参。
 
@@ -1402,7 +1413,7 @@ template <class ccy, int ccval>
 void Cls<ty, ty2, val>::NestCls<ccy, ccval>::Nprints() { cout << ccval; }
 ```
 
-#### 10.732 成员模板的实例化
+#### 10.742 成员模板的实例化
 
 成员模板的实例化和普通模板的实例化一样，既可以隐式实例化，也可以显式实例化，同时也遵循模板显式实例化的各种规则。
 
@@ -1452,7 +1463,7 @@ extern template struct Cls<int, string, 8>::NestCls<double, 10>;
 template struct Cls<int, string, 8>::NestCls<double, 10>;
 ```
 
-#### 10.733 成员模板的特例化
+#### 10.743 成员模板的特例化
 
 成员模板的特例化和普通模板的特例化一样，既可以全部特例化，也可以部分特例化，同时也遵循模板特例化的各种规则。
 
@@ -1637,13 +1648,13 @@ int main()
 }
 ```
 
-### 10.74 类模板与友元
+### 10.75 类模板与友元
 
 之前我们在介绍类类型时谈到过友元，友元不仅可以是函数或者类，还可以是模板。
 
 类模板可以有任何类类型所具有的属性，所以类模板也可以拥有友元。
 
-#### 10.741 模板实例友元
+#### 10.751 模板实例友元
 
 对于各种模板实例友元来说，和普通友元一样，遵循各种友元声明的规则：
 * 函数模板实例友元的声明规则和友元函数相同，所以函数模板实例友元可以是在定义类的作用域中不存在的实体。
@@ -1696,7 +1707,7 @@ int main()
 }
 ```
 
-#### 10.742 模板友元
+#### 10.752 模板友元
 
 和模板实例友元一样，模板友元也遵循各种友元声明的规则：
 * 函数模板友元的声明规则和友元函数相同，所以函数模板友元可以是在定义类的作用域中不存在的实体。
