--- a/files/第5章_函数.md
+++ b/files/第5章_函数.md
@@ -496,13 +496,39 @@ error_msg({"error","function", "undefined"}, "line_58");
 
 省略符形参与前一个形参名之间的逗号`,`可有可不有，等价。
 
+```c++
+/*以下都为正确的声明*/
+void test(int, double, ...);
+void test(int, double ...);
+void test(int...);
+void test(...);
+```
+
 > `initializer_list`形参可以和省略符形参一起使用，只要遵守各自的规则就行。
 
 ###### 5.3322 含省略符形参的使用
 
-当调用一个含有省略符形参的函数时，实参的数目必须要大于等于减去了省略符形参的形参数目。多余的实参都传递给了省略符形参，省略符对应的实参类型可以是任意类型。
+省略符形参接受0个或多个实参，当调用一个含有省略符形参的函数时，实参的数目必须要大于等于减去了省略符形参的形参数目。多余的实参都传递给了省略符形参，因为编译器不对省略符对应的实参进行类型检查，因此省略符对应的实参类型可以是任意不同类型的。
 
 > 省略符符号不能当做函数的实参。
+
+```c++
+void test(int, double, ...) {}
+void test2(...);
+
+int main()
+{
+    char ins = 'g';
+    // 调用错误，实参数目不能小于减去了省略符形参的形参数目
+    test(2);
+    // 调用错误， 省略符符号不能当做函数的实参
+    test(2, 3.55, ...);
+    // 调用正确，省略符对应的实参类型可以是任意不同类型的
+    test(-8, 4.15, 6, &ins, "string");
+    // 调用正确，省略符形参可以接受0个实参。
+    test2();
+}
+```
 
 #### 5.34 特殊类型形参分析
 
