--- a/files/第10章_模板.md
+++ b/files/第10章_模板.md
@@ -302,7 +302,7 @@ Cls<15,8,123,25,8> obj;
 
 #### 10.442 函数参数包
 
-函数参数包的介绍详见<a href="#1046121-函数参数包"><span style="color:yellow;font:normal bold 18px '楷体'">函数参数包</span></a>
+函数参数包的介绍详见<a href="#1046121-函数参数包"><span style="color:green;font:normal bold 18px '楷体'">函数参数包</span></a>
 
 ### 10.45 非参数包的模板形参使用
 
